--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,14 +1,16 @@
+@import"partials/mixins";
+
+
 *{
     margin: 0;
     padding: 0;
 }
 
+
 body{
     background-color: white;
     header{
-        display: flex;
-        justify-content: space-around;
-        flex-wrap: wrap;
+        @include flex;
         background-color: black;
         a{
             padding: 30px 50px;
@@ -21,10 +23,11 @@ body{
             background-color: red;
         }
     }
-
+    
 }
 
-@import "partials/general.scss"
+
+@import "partials/general.scss";
 
 
 
