--- a/css/style.css
+++ b/css/style.css
@@ -121,33 +121,134 @@ body header a:hover {
   box-shadow: 0 8px 16px rgb(0, 0, 0);
 }
 
-main section {
+.main-5 section {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
 }
-main section div {
+.main-5 section div {
   width: 300px;
   margin: 30px;
   border: 3px solid black;
 }
-main section div h3 {
+.main-5 section div h3 {
   text-align: center;
   margin: 10px;
 }
-main section div a img {
+.main-5 section div a img {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
   width: 100%;
 }
 
-.main-5 section .holas {
+.main-4 .submain {
+  margin: 5px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 200px);
+  gap: 10px;
+  grid-template-areas: "area0 area1 area1 area" "area0 area1 area1 area" "area2 area2 area2 area2" "area3 area3 area4 area4" "area3 area3 area4 area4";
+}
+.main-4 .submain .area {
+  display: flex;
+  flex-wrap: nowrap;
+  border: 3px solid black;
+}
+.main-4 .submain #area1 {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  border: 2px solid black;
-  margin: 20px;
+  grid-area: area1;
+  margin: 10px;
+}
+.main-4 .submain #area1 .info1 {
+  text-align: center;
+}
+.main-4 .submain #area1 .video1 {
+  width: 100%;
+  height: 93%;
+}
+.main-4 .submain #area1 .video1 a {
+  width: 100%;
+  height: 100%;
+}
+.main-4 .submain #area1 .video1 a img {
+  width: 100%;
+  height: 100%;
+}
+.main-4 .submain #area2 {
+  grid-area: area2;
+}
+.main-4 .submain #area2 .img2 img {
+  height: 100%;
+  width: 100%;
+}
+.main-4 .submain #area2 .info2 {
+  text-align: center;
+}
+.main-4 .submain #area2 .info2 h2 {
+  margin: 10px;
+}
+.main-4 .submain #area2 .info2 p {
+  margin: 10px;
+}
+.main-4 .submain #area3 {
+  grid-area: area3;
+}
+.main-4 .submain #area3 .img3 img {
+  height: 100%;
+  width: 100%;
+}
+.main-4 .submain #area3 .info3 {
+  text-align: center;
+}
+.main-4 .submain #area3 .info3 h2 {
+  margin: 10px;
+}
+.main-4 .submain #area3 .info3 p {
+  margin: 10px;
+}
+.main-4 #area4 {
+  grid-area: area4;
+}
+.main-4 #area4 .img4 img {
+  height: 100%;
+  width: 100%;
+}
+.main-4 #area4 .info4 {
+  text-align: center;
+}
+.main-4 #area4 .info4 h2 {
+  margin: 10px;
+}
+.main-4 #area4 .info4 p {
+  margin: 10px;
+}
+@media (max-width: 600px) {
+  .main-4 .submain {
+    margin: 5px;
+    display: grid;
+    flex-wrap: wrap;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(3, 50px 300px);
+    gap: 10px;
+    grid-template-areas: "area1" "area1" "area2" "area2" "area2" "area3" "area3" "area3" "area3" "area4" "area4" "area4" "area4";
+  }
+  .main-4 .submain .area {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+  .main-4 .submain #area2 .img2 {
+    width: 100%;
+  }
+  .main-4 .submain #area3 .img3 {
+    width: 100%;
+  }
+  .main-4 .submain #area4 .img4 {
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
