--- a/scss/partials/_inicio.scss
+++ b/scss/partials/_inicio.scss
@@ -1,11 +1,161 @@
-.main-5{
-    section{
-        .holas{
-            
-            @include flex;
-            border: 2px solid black;
-            margin: 20px; 
+.main-4 {
+
+    .submain {
+        margin: 5px;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(5, 200px);
+        gap: 10px;
+        grid-template-areas:
+            "area0 area1 area1 area"
+            "area0 area1 area1 area"
+            "area2 area2 area2 area2"
+            "area3 area3 area4 area4"
+            "area3 area3 area4 area4"
+        ;
+
+        
+        .area {
+            display: flex;
+            flex-wrap: nowrap;
+            border: 3px solid black;
         }
 
+        #area1 {
+           @include flex;
+            grid-area: area1;
+            margin: 10px;
+            .info1{
+                text-align: center;
+               }
+            .video1{
+                width: 100%;
+                height: 93%;
+                a{
+                    width: 100%;
+                    height: 100%;
+                    img{
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+            }
+        }
+        
+
+        #area2 {
+            grid-area: area2;
+
+            .img2 {
+                img {
+                    height: 100%;
+                    width: 100%;
+                }
+            }
+
+            .info2 {
+                text-align: center;
+                
+
+                h2 {
+                    margin: 10px;
+                }
+
+                p {
+                    margin: 10px;
+                }
+            }
+        }
+
+        #area3 {
+            grid-area: area3;
+
+            .img3 {
+
+                img {
+                    height: 100%;
+                    width: 100%;
+                }
+            }
+
+            .info3 {
+                text-align: center;
+
+                h2 {
+                    margin: 10px;
+                }
+
+                p {
+                    margin: 10px;
+                }
+            }
+        }
+    }
+
+    #area4 {
+        grid-area: area4;
+
+        .img4 {
+
+            img {
+                height: 100%;
+                width: 100%;
+            }
+        }
+
+        .info4 {
+            text-align: center;
+
+            h2 {
+                margin: 10px;
+            }
+
+            p {
+                margin: 10px;
+            }
+        }
+    }
+    @media (max-width: 600px) {
+        .submain{
+            margin: 5px;
+            display: grid;
+            flex-wrap: wrap;
+            grid-template-columns: repeat(1, 1fr);
+            grid-template-rows: repeat(3, 50px 300px);
+            gap: 10px;
+            grid-template-areas: 
+            "area1"
+            "area1"
+            "area2"
+            "area2"
+            "area2"
+            "area3"
+            "area3"
+            "area3"
+            "area3"
+            "area4"
+            "area4"
+            "area4"
+            "area4"
+            ;
+            .area{
+                @include flex;
+            }
+            #area2{
+                .img2{
+                    width: 100%;
+                }
+            }
+            #area3{
+                .img3{
+                    width: 100%;
+                }
+            }
+            #area4{
+                .img4{
+                    width: 100%;
+                }
+            }
+        }
     }
 }
